...
        android:padding="10dp"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="41dp"
        android:fontFamily="@font/varela_round_regular"
        android:text="@string/email_title"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:translationY="275dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/emailNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela_round_regular"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minWidth="0dp"
...
