...
            android:gravity="top"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <TextView
                android:id="@+id/eventTitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/varela_round_regular"
                android:lineSpacingExtra="2dp"
                android:maxLines="2"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/commentInputText"
                        android:layout_width="0dp"
                        android:layout_height="44dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_profile_input"
                        android:fontFamily="@font/varela_round_regular"
                        android:hint="@string/event_comment_placeholder"
...
                android:text="@string/event_detail_waitlist_joined_message"
                android:textColor="#A6A8A5"
                android:textSize="12sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/joinWaitingListButton"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_waitlist_button"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/varela_round_regular"
...
