...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/searchInput"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:background="@drawable/bg_profile_input"
            android:fontFamily="@font/varela_round_regular"
            android:hint="@string/invite_coorganizer_search_hint"
...
